--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asn1crypto==1.5.1
 asttokens==2.2.1
 backcall==0.2.0
 bcrypt==4.0.1
+biplist==1.0.3
 cached-property==1.5.2
 certifi==2022.12.7
 cffi==1.15.1
@@ -55,6 +56,7 @@ pytz==2022.7.1
 PyYAML==6.0
 requests==2.28.2
 requests-file==1.5.1
+scandir==1.10.0
 scikit-learn==1.2.1
 scipy==1.10.1
 scp==0.14.5
