--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 appnope==0.1.3
 asn1crypto==1.5.1
 asttokens==2.2.1
+async-generator==1.10
+attrs==22.2.0
 backcall==0.2.0
 bcrypt==4.0.1
+beautifulsoup4==4.12.0
 biplist==1.0.3
 cached-property==1.5.2
 certifi==2022.12.7
@@ -15,11 +18,13 @@ cycler==0.11.0
 decorator==5.1.1
 enum34==1.1.10
 et-xmlfile==1.1.0
+exceptiongroup==1.1.1
 executing==1.2.0
 filelock==3.9.0
 fonttools==4.39.0
 frida==16.0.10
 frida-tools==12.1.1
+h11==0.14.0
 haralyzer==2.2.0
 hexdump==3.3
 idna==3.4
@@ -36,6 +41,7 @@ missingno==0.5.2
 numba==0.56.4
 numpy==1.23.5
 openpyxl==3.1.1
+outcome==1.2.0
 packaging==23.0
 pandas==1.5.3
 paramiko==3.0.0
@@ -51,6 +57,7 @@ pycparser==2.21
 Pygments==2.14.0
 PyNaCl==1.5.0
 pyparsing==3.0.9
+PySocks==1.7.1
 python-dateutil==2.8.2
 pytz==2022.7.1
 PyYAML==6.0
@@ -61,13 +68,20 @@ scikit-learn==1.2.1
 scipy==1.10.1
 scp==0.14.5
 seaborn==0.12.2
+selenium==4.8.3
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4
 stack-data==0.6.2
 threadpoolctl==3.1.0
 tldextract==3.4.0
 tqdm==4.65.0
 traitlets==5.9.0
+trio==0.22.0
+trio-websocket==0.10.2
 typing_extensions==4.5.0
 urllib3==1.26.14
 wcwidth==0.2.6
+wsproto==1.2.0
 XlsxWriter==3.0.8
